Homework 7-8. Fix horizontal scrollbar

--- a/src/html/homework7_8/css/styles.css
+++ b/src/html/homework7_8/css/styles.css
@@ -188,6 +188,7 @@ main {
 }
 
 .main-slider {
+    display: inline-block;
     position: relative;
     top: 70px;
     left: 690px;
@@ -423,7 +424,7 @@ article:before {
 }
 
 .wrapper__info-bottom .column {
-    margin-left: 40px;
+    padding-left: 40px;
     width: 277px;
 }
 
